--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# VS code orkspace
+/.01-first-app/*.code-workspace
+/works
 
 # dependencies
+/works
+/data-temp
 /node_modules
 /.pnp
 .pnp.js
@@ -13,6 +18,8 @@
 
 # misc
 .DS_Store
+.env
+.zip
 .env.local
 .env.development.local
 .env.test.local
