--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # VS code orkspace
-/.01-first-app/*.code-workspace
+/.vscode/*.code-workspace
 /works
 
 # dependencies
