--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # VS code orkspace
 /.code-workspace
-
+.code-workspace
 
 # dependencies
 /works
