--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # VS code orkspace
-.code-workspace
-/.code-workspace
-./01-first-app.code-workspace
-
 
 # dependencies
+/vscode_workspace
 /works
 /data-temp
 /node_modules
